--- a/src/main/resources/static/templates/main.html
+++ b/src/main/resources/static/templates/main.html
@@ -99,7 +99,7 @@
                                                         </label>
                                                         <label class="znxy-questions-options-label znxy-ui-formitem-checkbox">
                                                             <input type="checkbox" ng-model="selectAll"
-                                                                   ng-click="all(selectAll,outerIndex,innerIndex)"
+                                                                   ng-click="all(selectAll,outerIndex)"
                                                                    class="znxy-questions-option znxy-questions-6475be1097a504b38f47aa3b366fda9d1515307495-0"
                                                             > <i></i> <span> 全选</span>
                                                         </label>
